--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-header {
-    background-color: blueviolet;
-    color: white;
-}
-
+body {
+    backgroungd-color:#015d77;
+    color: rgb(2, 2, 95);
+    
