--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
-    backgroungd-color:#015d77;
-    color: rgb(2, 2, 95);
-    
+    background-color:#210253;
+    color: rgb(107, 107, 211);
+}
