--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-body {
-    background-color:#210253;
-    color: rgb(107, 107, 211);
+body{
+    background-color: #210253;
+    color: rgb(107, 107, 211)
 }
-.cabecalho{
-        background-color: #383d58;
-        color: white;
-        justify-content: space-around;
-        width: 20%;
-        height: 20%;
-}
+.cabecalho {
+    background-color: #383D58;
+    color: white;
+    display:flex;
+    justify-content: space-around;
+    }
